final ticket 3 done

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -3,12 +3,9 @@
     <h1>Bloom Institute of Technology</h1>
     <h2>Bandersnatch {{ sprint }}</h2>
     <p>Proof of Local Setup: {{ password.decode() }}</p>
-    <h3>Data Science Team</h3>
+    <h3>Data Science</h3>
     <ul>
-        <li>Robert Sharp: Systems Designer, DevOps</li>
-        <li>April Fairweather: Database Engineer</li>
-        <li>Thackery Binx: Data Analyst</li>
-        <li>Eugene Albright: Machine Learning Engineer</li>
+        <li>Tom Tarpey</li>
     </ul>
     <h3>Tech Stack</h3>
     <ul>
